# pdf-auto-outline

./: README.md  pyproject.toml
src/pdf_auto_outline/: __init__.py  __main__.py  main.py  pdfao.py
