[project]
name = "pdf-auto-outline"
version = "0.1.6"
description = "Automatically generate and edit PDF table of contents / outline"
readme = "README.md"
authors = [
    { name = "Rossikos", email = "216631970+rossikos@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pymupdf-layout>=1.26.6",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
sioyek = ["sioyek"]

[project.scripts]
pdfao = "pdf_auto_outline.main:main"
pdf-auto-outline = "pdf_auto_outline.main:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/rossikos/pdf-auto-outline"
"Bug Tracker" = "https://github.com/rossikos/pdf-auto-outline/issues"

